--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 To build anything, you need to fetch vcglib from svn by running
 "svn checkout https://vcg.svn.sourceforge.net/svnroot/vcg/trunk/vcglib vcglib" in this directory
 
-Then create a folder outside this one called stltools-build or the like, go into it and run 
+To build stltools create a folder outside this one called stltools-build or the like, go into it and run 
 "ccmake /path/to/meshcleaner/stltools" to generate Makefiles and then just build using make
+You can also open CMakeLists.txt for either project in Qt Creator if you want a IDE
